# ot-harjoitustyo

./: .coveragerc  .gitignore  .pylintrc  README.md  pyproject.toml  tasks.py  tyoaikakirjanpito.md
dokumentaatio/: QetA.md  arkkitehtuuri.md  kayttoohje.md  testausdokumentti.md  tyoaikakirjanpito.md  vaatimusmaarittely.md
laskarit/viikko1/: gitlog.txt
laskarit/viikko2/maksukortti/: .coverage  pyproject.toml  tasks.py
laskarit/viikko2/maksukortti/htmlcov/: index.html  src_maksukortti_py.html  status.json
laskarit/viikko2/maksukortti/src/tests/: .coverage  maksukortti_test.py
laskarit/viikko2/unicafe/src/tests/: .kassapaate_test.py.swp  kassapaate_test.py  maksukortti_test.py
src/: build_database_for_tests.py  database_initialize.py  index.py  initialize_database.py  item.py  user.py
src/repositories/: item_repository.py  user_repository.py
src/services/: app_service.py
src/tests/: conftest.py  create_user_test.py  repositories_test.py  services_test.py
src/ui/: ui.py  ui_create_new_user.py  ui_item.py  ui_item_add.py  ui_item_list.py  ui_login.py  ui_logout.py
