[tool.poetry]
name = "ot-harjoitustyo"
version = "0.1.0"
description = ""
authors = ["karhelmi <helmi.karesti@helsinki.fi>"]

[tool.poetry.dependencies]
python = "^3.6"
cowsay = "^3.0"
invoke = "^1.5.0"
python-dotenv = "^0.17.1"

[tool.poetry.dev-dependencies]
pytest = "^6.2.2"
coverage = "^5.5"
pylint = "^2.7.4"
autopep8 = "^1.5.6"
pytest-dotenv = "^0.5.2"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
